
v2.1.69  2023-01-27
* change the result of key_reset_identity and functions calling it: if a non-own
  identity with no known key is reset the result is now PEP_KEY_NOT_FOUND rather
  than PEP_ILLEGAL_VALUE .  This fixes
  https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/118 (for Engine
  series 2.x).

v2.1.68
* do not load positron's testing media key associated to the ageinghacker.net
  domain by default
* Match header names case-insensitively: this is an incompatible change, but
  the Engine's previous behaviour was clearly incorrect
* fix windows compilation problem releated to strcasecmp; problem reported by
  Alex.  This fixes
  https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/109

v2.1.67
* Add NEWS file.
* add release script (for the Engine maintainer): the Engine version is now in a
  machine-generated file src/pEpEngine_version.h
* No user-visible changes

v2.1.66
* handle_pong: fix bug preventing notification from being called, reported by
  Alex Sualdea

v2.1.65
* No change since v2.1.65-RC1 except for the version string.

v2.1.65-RC1
Starting from this point we consistently adopt the "v" prefix for tags,
abandoning our previous convention of using "Release_".
* fix gitea #83, #84: there is a new rating for messages (and identities)
  protected by a media key: PEP_rating_media_key_protected , still with no
  colour.
* in the unusual case that we decrypt an *outgoing* message, do not send pings

Release_2.1.64
* fix memory handling bug in config_media_keys, reported by dirk;
* media keys: normalise keys to upper case.  Fail if FPRs are empty strings.

Release_2.1.63
* minor source fixes for windwos, contributed by Alex
* build system updates for windows, contributed by Alex
* Merge PR PEMA-24 by Dirk: build system for iOS

Release_2.1.62
* echo_api.c: do not unconditionally use <>-style #include.  This fixes the
  Android build.

Release_2.1.61
* Distribution.Echo: fix database initialisation bug which broke init()
